[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dj-bpm-tool"
version = "0.1.0"
description = "Neutral DJ BPM extractor + CSV merge/normalize tool (MP3 only)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mutagen>=1.47.0",
  "serato-tools>=0.1.0"
]

[project.scripts]
dj-bpm = "dj_bpm_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
